added delete api
